+ change slogan copy + fix meet up icon alignment

--- a/client/less/agency.less
+++ b/client/less/agency.less
@@ -339,7 +339,8 @@ section {
     text-align: left;
   }
   p {
-    font-size: 25px;
+    font-size: 20px;
+    margin-bottom: 100px;
     @media @phones {
       font-size: 18px;
     }
